--- a/loja_vendas-main/index.html
+++ b/loja_vendas-main/index.html
@@ -23,7 +23,7 @@ href="css/style.css">
 <body>
 <h1>site <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <i class="fa-solid fa-layer-group"></i><h1>
-<div> socorro professor </div>
+<div> socorro professor </div> <div> tá certo? </div>
 
 
 
