--- a/loja_vendas-main/loja_vendas-main/loja_vendas-main/index.html
+++ b/loja_vendas-main/loja_vendas-main/loja_vendas-main/index.html
@@ -14,14 +14,23 @@ href="css/style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@200..800&display=swap" rel="stylesheet">
-<h1>site <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<i class="fa-solid fa-layer-group"></i><h1>
+<h1>site <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <i class="fa-solid fa-layer-group"></i><h1>
 
 </head>
 
 <body>
-
-
+     <header>
+    <h1>Cabeçalho</h1>
+     <nav>
+      <u1>
+        <li><a href="#">Home</a> </li>
+        <li><a href="#">Sobre</a> </li>
+        <li><a href="#">Contato</a> <li>
+            </ul>
+        </nav>
+    </header>
+    
 
 
 </body>
